--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.3",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "bright-horizon": "file:",
     "framer-motion": "^12.0.11",
