--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "bright-horizon": "file:",
+    "classnames": "^2.5.1",
     "framer-motion": "^12.0.11",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
