--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@paypal/react-paypal-js": "^8.8.1",
     "@tailwindcss/vite": "^4.0.3",
     "aos": "^2.3.4",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bright-horizon": "file:",
     "classnames": "^2.5.1",
