--- a/client/package.json
+++ b/client/package.json
@@ -21,10 +21,12 @@
     "classnames": "^2.5.1",
     "framer-motion": "^12.0.11",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.487.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.5",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
