--- a/server/.env.production
+++ b/server/.env.production
@@ -6,6 +6,8 @@ CLOUDINARY_CLOUD_NAME=dqzl0pxhr
 CLOUDINARY_API_KEY=116275162478951
 CLOUDINARY_API_SECRET=bWNYYgFRkbDBXaUjaujiBu5M1Mk
 REACT_APP_API_URL=https://bright-horizon-institute-2.onrender.com
+EMAIL_USER=pratip.bhi@gmail.com
+EMAIL_PASS=sykx ccqd ymjh uwrz
 
 # mongodb username = pratipbhi
 # mongodb password = E3H8c1XfpKgo7SWK
