--- a/server/.env
+++ b/server/.env
@@ -8,6 +8,10 @@ CLOUDINARY_API_SECRET=bWNYYgFRkbDBXaUjaujiBu5M1Mk
 REACT_APP_API_URL=http://localhost:8000
 EMAIL_USER=pratip.bhi@gmail.com
 EMAIL_PASS=sykx ccqd ymjh uwrz
+FRONTEND_URL=https://brighthorizoninstitute.com/
+BACKEND_URL=https://bright-horizon-institute-2.onrender.com 
+PAYPAL_MODE=sandbox
+PORT=8000
 
 
 # mongodb username = pratipbhi
